:snail::melon: Updated at https://danielx.net/editor/

--- a/style.styl
+++ b/style.styl
@@ -19,6 +19,17 @@ app
   & > workspace
     background-color: powderblue
     flex-grow: 1
+    height: 100%
+    position: relative
+
+    & > img
+      position: absolute
+
+    & > screen
+      display: block
+      width: 100%
+      height: 100%
+      position: absolute
 
   & > tools
     background-color: olive
