--- a/style.styl
+++ b/style.styl
@@ -22,15 +22,22 @@ app
     height: 100%
     position: relative
     overflow: hidden
-
-    & > img
-      position: absolute
-
-    & > screen
+    
+    & > scene
       display: block
       width: 100%
       height: 100%
       position: absolute
+
+      & > img
+        position: absolute
+
+    & > canvas
+      display: block
+      width: 100%
+      height: 100%
+      position: absolute
+      pointer-events: none
 
   & > tools
     background-color: olive
