:convenience_store::baseball: Updated at https://danielx.net/editor/

--- a/style.styl
+++ b/style.styl
@@ -42,6 +42,10 @@ app
   & > tools
     background-color: olive
     width: 100px
+    
+    & > tool
+      border: 1px solid white
+      display: block
 
   & > materials
     background-color: yellow
