:bear::yellow_heart: Updated at https://danielx.net/editor/

--- a/style.styl
+++ b/style.styl
@@ -29,7 +29,7 @@ app
       height: 100%
       position: absolute
 
-      & > img
+      & > img, & > canvas
         position: absolute
 
     & > canvas
