:arrow_up::sushi: Updated at https://danielx.net/editor/

--- a/style.styl
+++ b/style.styl
@@ -44,8 +44,11 @@ app
     width: 100px
     
     & > tool
+      background-size: cover
       border: 1px solid white
       display: block
+      width: 64px
+      height: 64px
 
   & > materials
     background-color: yellow
