--- a/style.styl
+++ b/style.styl
@@ -26,6 +26,7 @@ app
 
       & > img, & > canvas
         position: absolute
+        transform-origin: 0 0
 
     & > canvas
       display: block
