--- a/style.styl
+++ b/style.styl
@@ -23,6 +23,7 @@ app
       width: 100%
       height: 100%
       position: absolute
+      transform-origin: 0 0
 
       & > img, & > canvas
         position: absolute
