--- a/style.styl
+++ b/style.styl
@@ -5,6 +5,7 @@ body, html
   height: 100%
 
 body
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
   margin: 0
 
 app
@@ -19,7 +20,7 @@ app
     position: relative
     overflow: hidden
 
-    & > viewport
+    & > render-area
       background-color: white
       display: block
       position: absolute
@@ -95,3 +96,51 @@ app
       & > img
         max-width: 64px
         height: auto
+
+#modal
+  background-color: rgba(0, 0, 0, 0.25)
+  display: none
+  position: absolute
+  z-index: 9000
+  top: 0
+
+  input[type=file]
+    box-sizing: border-box
+    padding: 5em 2em
+    width: 320px
+    height: 180px
+
+  & > *
+    background-color: white
+    border: 1px solid black
+    margin: auto
+    position: absolute
+    top: 0
+    bottom: 0
+    left: 0
+    right: 0
+
+  &.active
+    display: block
+    width: 100%
+    height: 100%
+
+#options
+  & > h1
+    font-size: 24px
+    margin: 0 0 0.5em
+
+  & > label
+    display: flex
+    margin-bottom: 1em
+
+    & > h2
+      display: inline-block
+      font-size: 18px
+      margin: 0 1em 0
+      width: 60px
+
+  height: 80%
+  margin: auto
+  padding: 1em
+  width: 80%
