--- a/style.styl
+++ b/style.styl
@@ -78,7 +78,7 @@ app
     display: flex
     flex-direction: column
     flex-grow: 0
-    width: 129px
+    width: 146px
     height: 100%
 
     & > actions
@@ -92,6 +92,7 @@ app
       display: block
       width: 100%
       height: 100%
+      overflow: auto
 
       & > img
         max-width: 64px
